[package]
edition = "2018"
name = "tupsetuphook"
version = "0.1.0"
authors = ["Arun Sivaramakrishnan <arun.sivaramakrishnan@gmail.com>"]

[lib]
name = "spawn"
path = "lib/mod.rs"

[[bin]]
name = "tupspawn"
path = "src/main.rs"

[dependencies]
#named_pipe = "0.4.1"
# which = "3.1.0"
tupinject = {path = "../tupinject"}
wchar = "0.11.0"
lazy_static = "1.4.0"
winapi = { version = "0.3.6", features = ["winnt", "processthreadsapi", "fileapi", "winbase", "synchapi", "handleapi", "libloaderapi", "errhandlingapi"] }
detours-sys = { git = "https://github.com/svark/detours", features = ["buildtime_bindgen"] }